src/FinancialForce Accounting/objects/AsOfAgingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the configuration options for the As of Aging process.</description>
    <fields>
        <fullName>BatchSizePhase1__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The As of Aging process consists of three phases. This setting contains the number of records to process in one batch for phase 1.</description>
        <label>Batch Size (Phase 1)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchSizePhase2__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The As of Aging process consists of three phases. This setting contains the number of records to process in one batch for phase 2.</description>
        <label>Batch Size (Phase 2)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchSizePhase3__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The As of Aging process consists of three phases. This setting contains the number of records to process in one batch for phase 3.</description>
        <label>Batch Size (Phase 3)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>As Of Aging Settings</label>
</CustomObject>